HelloUltraviolet/Fixtures/RejectedSource/Attributes/TestInvalidAuthorityParameter/Expected.uv
//! Expected diagnostic metadata for the TestInvalidAuthorityParameter rejected-source specimen.

expectedDiagnostic("E-TST-0105", "diagnostics.TestAttributes")
expectedDiagnostic("E-TST-0105", "req.TestAuthority")
